# thrift-qt-sipesc

./: .directory  .tags  .tags_sorted_by_file  README.md  doc.txt  note.txt
ThriftClient/: Makefile  ThriftClient  ThriftClient.pro  clientwindow.cpp  clientwindow.h  clientwindow.ui  commandparser.h  commandpasrer.cpp  globals.cpp  globals.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  moc_clientwindow.cpp  moc_commandparser.cpp  moc_globals.cpp  moc_logindialog.cpp  moc_registdialog.cpp  registdialog.cpp  registdialog.h  registdialog.ui  ui_clientwindow.h  ui_logindialog.h  ui_registdialog.h  user.cpp  user.h
ThriftServer/: CppServer.cpp  Makefile  ThriftServer.pro  database.cpp  database.db  database.h  helloworld  main.cpp  moc_serverwindow.cpp  moc_taskmanager.cpp  moc_taskparser.cpp  moc_usermanager.cpp  moc_workerthread.cpp  moc_workerthreadpool.cpp  networkservicehandler.cpp  networkservicehandler.h  org.ssdut.plugin.helloworld.feature.messageprovider.h  org.ssdut.plugin.helloworld.feature.messagereceiver.h  serverwindow.cpp  serverwindow.h  serverwindow.ui  tasklistener.cpp  tasklistener.h  taskmanager.cpp  taskmanager.h  taskparser.cpp  taskparser.h  taskservicehandler.cpp  taskservicehandler.h  ui_serverwindow.h  usermanager.cpp  usermanager.h  userservicehandler.cpp  userservicehandler.h  workerthread.cpp  workerthread.h  workerthreadpool.cpp  workerthreadpool.h
ThriftServer/user/ghw/: temp.c
helloworld/: .tags  .tags_sorted_by_file  CMakeLists.txt  org.ssdut.plugin.helloworld  org.ssdut.plugin.helloworld.sipplugin
helloworld/inc/: messageproviderimpl.h  messagereceiverimpl.h  org.ssdut.plugin.helloworld.h
helloworld/plugin/: org.ssdut.plugin.helloworld.feature.messageprovider.h  org.ssdut.plugin.helloworld.feature.messagereceiver.h
helloworld/qrc/: org.ssdut.plugin.helloworld.qrc  org.ssdut.plugin.helloworld_zh_CN.ts
helloworld/src/: messageproviderimpl.cxx  messagereceiverimpl.cxx  org.ssdut.plugin.helloworld.cxx  org.ssdut.plugin.helloworld.cxx~
helloworld/test/: .directory  CMakeLists.txt  CMakeLists.txt~
helloworld/test/inc/: org.ssdut.plugin.helloworld.feature.messagereceiver.h
helloworld/test/src/: main  main.cxx
helloworld/test/tmp/: CMakeCache.txt  cmake_install.cmake
helloworld/test/tmp-back/: CMakeCache.txt  Makefile  cmake_install.cmake
helloworld/tmp/: .directory  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  org.ssdut.plugin.helloworld.features  org.ssdut.plugin.helloworld.xml.cxx  org.ssdut.plugin.helloworld_1.0.0.sep  qrc_org.ssdut.plugin.helloworld.cxx
thrift/: Network.thrift  Types.thrift  tutorial.thrift
thrift/gen-cpp/: NetworkService.cpp  NetworkService.h  NetworkService_server.skeleton.cpp  Network_constants.cpp  Network_constants.h  Network_types.cpp  Network_types.h  Types_constants.cpp  Types_constants.h  Types_types.cpp  Types_types.h
